[CSS] Fix invisible checkboxes

--- a/public/assets/css/base_mid.css
+++ b/public/assets/css/base_mid.css
@@ -263,12 +263,9 @@ input.larger {
       box-shadow: 0 0 8px var(--accent);
 }
 .content input[type="checkbox"] {
-      position: absolute;
       height: 1px;
       width: 1px;
       overflow: hidden;
-      clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
-      clip: rect(1px, 1px, 1px, 1px);
 }
 
 
